crates/reifydb-testing/tests/testscript/errors/bare_command.error
parse error at line 1 column 15 for "\"command\"":
command
              ^